--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ section{
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background: url('/Images/cover2.png') no-repeat;
+    background: url('Images/cover2.png') no-repeat;
     background-size: cover;
     background-position: center;
 }
