--- a/style.css
+++ b/style.css
@@ -408,19 +408,24 @@ span{
 
 .myworks-container .myworks-box{
     position: relative;
+    height: 60vh;
     border-radius: 2rem;
     box-shadow: 0 0 1rem var(--bg-color);
+    border: 2px solid white;
     overflow: hidden;
     display: flex;
 }
 
-.myworks-box img{
-    width: 100%;
-    transition: .5s ease;
+.myworks-img{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 100px;
 }
 
-.myworks-box:hover img{
-    transform: scale(1.1);
+.myworks-img img{
+    width: 100%;
 }
 
 .myworks-box .myworks-layer{
@@ -436,20 +441,14 @@ span{
     flex-direction: column;
     text-align: center;
     padding: 0 4rem;
-    transform: translateY(100%);
-    transition: .5s ease;
-}
-
-.myworks-box:hover .myworks-layer{
-    transform: translateY(0);
 }
 
 .myworks-layer h4{
-    font-size: 3rem;
+    font-size: 2.7rem;
 }
 
 .myworks-layer p{
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     margin: .3rem 0 1rem;
 }
 
@@ -632,9 +631,16 @@ span{
     }
 }
 
-@media (max-width: 850px){
+@media (max-width: 870px){
     .animate.home-img{
         width: 55%;
+    }
+    .myworks h2{
+        margin-bottom: 3rem;
+    }
+
+    .myworks-container{
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
@@ -703,13 +709,11 @@ span{
         background: var(--bg-color);
         opacity: .6;
     }
+}
 
-    .myworks h2{
-        margin-bottom: 3rem;
-    }
-
-    .myworks-container{
-        grid-template-columns: repeat(2, 1fr);
+@media (max-width : 617px ){
+    html{
+        font-size: 50%;
     }
 }
 
